
skulls-x230 0.0.8 - released 2018-07-06
---------------------------------------
This release includes the following changes:
* based on coreboot commit e49ac56808
  (parent in master branch cf243657e7)
* update SeaBIOS to version 1.11.2
* update Intel's microcode revision from 1f to 20
  (this includes Spectre Variant 3a and 4 mitigations)


skulls-x230 0.0.7 - released 2018-06-18
---------------------------------------
This release includes the following changes:
* based on coreboot commit a7835c462e
* reproducible builds
* improved installation scripts
* keep the TPM active


skulls-x230 0.0.6 - released 2018-05-16
---------------------------------------
This release includes the following changes:
* based on coreboot commit d8ec973fd2
* faster booting (unneeded driver init removed)
* documentation improvements


coreboot-x230 0.0.5 - released 2018-04-18
-----------------------------------------
This release includes the following changes:
* based on coreboot commit 92263853ad
* update SeaBIOS to version 1.11.1
* new release packaging
* scripts to simplify flashing


coreboot-x230 0.0.4 - released 2018-03-15
-----------------------------------------
This release includes the following changes:
* based on coreboot commit cb9f55ec38
* update Intel's microcode revision from 1c to 1f
  (this includes Spectre/Meltdown mitigations)


coreboot-x230 0.0.3 - released 2018-02-20
-----------------------------------------
This release includes the following changes:
* based on coreboot commit 35972def1d
* include the nvramcui graphical CMOS settings payload
* include Intel's stable microcode revision 1c
* support for all X230 models (from now on)


coreboot-x230 0.0.2 - released 2018-01-17
-----------------------------------------
This release includes the following changes:
* based on coreboot commit 533ea7adb5
* Intel microcode 20180108 included (in CBFS)
* only the i5-3320M CPU model is supported now
* VGA BIOS rom (proprietary binary) executed in secure mode

