@@ -1,4 +1,10 @@
 
+skulls-x230 0.0.9 - tbd
+---------------------------------------
+This release includes the following changes:
+* added script to check for new releases
+
+
 skulls-x230 0.0.8 - released 2018-07-06
 ---------------------------------------
 This release includes the following changes:
